<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewInclass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="103dp"
        android:layout_marginTop="103dp"
        android:text="In Class 02 - Survey!!!!"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/textViewLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editTextUserLogin"
        android:layout_marginEnd="-103dp"
        android:layout_toStartOf="@+id/textViewInclass"
        android:text="@string/login_label"
        android:textColor="#000000"/>

    <EditText
        android:id="@+id/editTextUserLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="29dp"
        android:layout_marginTop="188dp"
        android:ems="10"
        android:hint="@string/hint_enter_login"
        android:inputType="textPersonName"
        android:textColor="#000000"/>

    <TextView
        android:id="@+id/textViewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editTextPassword"
        android:layout_marginEnd="-103dp"
        android:layout_toStartOf="@+id/textViewInclass"
        android:text="@string/label_Password"
        android:textColor="#000000"/>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/editTextUserLogin"
        android:layout_marginBottom="205dp"
        android:ems="10"
        android:hint="@string/hint_enter_password"
        android:inputType="textPersonName"
        android:textColor="#000000"/>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="125dp"
        android:layout_marginStart="124dp"
        android:text="@string/login_label_button" />

</RelativeLayout>