<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SurveyActivity">


    <TextView
        android:id="@+id/textViewQuestionNo"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="126dp"
        android:layout_marginTop="83dp"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/textViewQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="63dp"
        android:layout_marginTop="126dp"
        android:textColor="#000000" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="119dp"
        android:layout_marginTop="196dp"
        android:orientation="vertical" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="109dp"
        android:layout_marginEnd="79dp"
        android:text="@string/next_button" />

    <TextView
        android:id="@+id/textViewQuestionField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/textViewQuestionNo"
        android:layout_marginStart="148dp"
        android:text="@string/question_label"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/textViewUserSurvey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="37dp"
        android:layout_toStartOf="@+id/btnNext"
        android:text="@string/user_survey_label"
        android:textColor="#000000" />
</RelativeLayout>